tdf#157164 Vertical Position preview does not show red line for baseline

regression from
    commit f510ea2d7962a4325055c6380a0032331b4e87cf
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Wed Jan 12 11:49:35 2022 +0200
    don't bother trying to draw stuff which is effectively invisible

Change-Id: Idc947163521ebfb65b27204fb5c65b1f59fe6de3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157481
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157495